Updates for urls

--- a/src/deck.mdx
+++ b/src/deck.mdx
@@ -93,7 +93,7 @@ export const themes = [highlight, theme];
 
 ## Before we start
 
-- We will be using a [Notebook](https://eaglelabs.maps.arcgis.com/) server
+- We will be using a [Notebook](https://enterprise.cloud.eaglegis.co.nz/portal) server
 
 - Link is in the resources section
 
@@ -633,7 +633,7 @@ When a pipe's LifeCycleStatus is updated to Abandoned, the PressureZone attribut
 
 > [Python Guide](https://developers.arcgis.com/python/guide/overview-of-the-arcgis-api-for-python/)
 
-> [ArcGIS Enterprise Notebook server](https://enterprise.cloud.eaglegis.co.nz/)
+> [ArcGIS Enterprise Notebook server](https://enterprise.cloud.eaglegis.co.nz/portal)
 
 > [Sample Notebooks](https://developers.arcgis.com/python/sample-notebooks/)
 
