Adding in Pro project and notes for fixing\cloning environments.

--- a/src/deck.mdx
+++ b/src/deck.mdx
@@ -115,9 +115,9 @@ Feel free to fork it.
 
 Your first initial followed by an _x_ and your last initial
 
-Ryan Cooper = rxc 
+Ryan Cooper = rxc_workshop 
 
-Grant Carroll = gxc
+Grant Carroll = gxc_workshop
 
 Password is _gis12345_
 
@@ -567,6 +567,8 @@ return k + n;  // Will return 110
 
 ---
 
+---
+
 ## Visualisation
 
 ---
@@ -576,6 +578,8 @@ return k + n;  // Will return 110
 ---
 
 ## Attribute Rules
+
+[More details](https://pro.arcgis.com/en/pro-app/help/data/geodatabases/overview/an-overview-of-attribute-rules.htm)
 
 ---
 
@@ -640,6 +644,13 @@ When a pipe's LifeCycleStatus is updated to Abandoned, the PressureZone attribut
 > [Automate the boring stuff](https://automatetheboringstuff.com/)
 
 > [GeoNet Community](https://community.esri.com/groups/arcgis-python-api)
+
+
+---
+
+## ArcGIS Pro Fix for Cloning Environement
+
+> [Help !!](https://community.esri.com/docs/DOC-12021-python-at-arcgispro-22)
 
 
 ---
