Updates for CSV links

--- a/src/deck.mdx
+++ b/src/deck.mdx
@@ -329,6 +329,8 @@ module allows you to manage some of the web based applications available in ArcG
 
 ## [Module Six](https://enterprise.cloud.eaglegis.co.nz/portal/home/notebook/notebook.html?id=4dce25997bd34cdab2e641bce1c441a4)
 
+[csv's](https://app.box.com/s/c622b85v6dm3vzk762s9276kqtu1otpf)
+
 ---
 
 <img src="/static/assets/demo-guy.png" style={{ height: '400px' }} />
@@ -528,6 +530,8 @@ All variables declared at global scope will be available anywhere in the script
 
 Variables declared inside of functions can override global scope variables, while inside the function
 
+Available globals depend on the profile.
+
 ---
 
 ```javascript
@@ -570,6 +574,12 @@ return k + n;  // Will return 110
 ---
 
 ## Visualisation
+
+---
+
+[Simple Example](https://local-maps.maps.arcgis.com/home/webmap/viewer.html?webmap=0e56e5c9847c4377bd0f7d5627576406)
+
+[More Complex](https://local-maps.maps.arcgis.com/home/webmap/viewer.html?webmap=0e56e5c9847c4377bd0f7d5627576406)
 
 ---
 
