--- a/src/deck.mdx
+++ b/src/deck.mdx
@@ -303,39 +303,38 @@ module allows you to manage some of the web based applications available in ArcG
 
 <img src="/static/assets/demo-guy.png" style={{ height: '400px' }} />
 
-## [Module Two](https://enterprise.cloud.eaglegis.co.nz/portal/home/notebook/notebook.html?id=cee4b83d8947404e801832d5db1c495d)
+## [Module One](https://github.com/carg563/workshop-arcade-and-the-arcgis-api-for-python/blob/master/src/code-samples/python/notebooks/Module%201%20-%20Introduction%20to%20the%20ArcGIS%20API%20for%20Python%20Part%20I.ipynb)
 
 ---
 
 <img src="/static/assets/demo-guy.png" style={{ height: '400px' }} />
 
-## [Module Three](https://enterprise.cloud.eaglegis.co.nz/portal/home/notebook/notebook.html?id=1b62db40d4b64dcc905f91e52dea476d)
+## [Module Two](https://github.com/carg563/workshop-arcade-and-the-arcgis-api-for-python/blob/master/src/code-samples/python/notebooks/Module%202%20-%20Introduction%20to%20the%20ArcGIS%20API%20for%20Python%20Part%20II.ipynb)
 
 ---
 
 <img src="/static/assets/demo-guy.png" style={{ height: '400px' }} />
 
-## [Module Four](https://enterprise.cloud.eaglegis.co.nz/portal/home/notebook/notebook.html?id=bbebc756962941b1a3ccb60bca438e7e)
+## [Module Three](https://github.com/carg563/workshop-arcade-and-the-arcgis-api-for-python/blob/master/src/code-samples/python/notebooks/Module%203%20-%20Removing%20Users%20from%20your%20Organisation.ipynb)
 
 ---
 
 <img src="/static/assets/demo-guy.png" style={{ height: '400px' }} />
 
-## [Module Five](https://enterprise.cloud.eaglegis.co.nz/portal/home/notebook/notebook.html?id=9d5c7bdeaff64f32baf893d3bb5a61fd)
+## [Module Four](https://github.com/carg563/workshop-arcade-and-the-arcgis-api-for-python/blob/master/src/code-samples/python/notebooks/Module%204%20-%20Add%20Users%20to%20your%20Organisation.ipynb)
 
 ---
 
 <img src="/static/assets/demo-guy.png" style={{ height: '400px' }} />
 
-## [Module Six](https://enterprise.cloud.eaglegis.co.nz/portal/home/notebook/notebook.html?id=4dce25997bd34cdab2e641bce1c441a4)
+## [Module Five](https://github.com/carg563/workshop-arcade-and-the-arcgis-api-for-python/blob/master/src/code-samples/python/notebooks/Module%205%20-%20Adding%20and%20Updating%20Content.ipynb)
 
-[CSV's](https://app.box.com/s/c622b85v6dm3vzk762s9276kqtu1otpf)
 
 ---
 
 <img src="/static/assets/demo-guy.png" style={{ height: '400px' }} />
 
-## [Module Seven](https://enterprise.cloud.eaglegis.co.nz/portal/home/notebook/notebook.html?id=106b6769f0734bef9346dac5c3b52fce)
+## [Module Six](https://github.com/carg563/workshop-arcade-and-the-arcgis-api-for-python/blob/master/src/code-samples/python/notebooks/Module%206%20-%20Updating%20Content%20from%20a%20GPX%20file.ipynb)
 
 ---
 
